<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:text="@string/nextButtonText"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/previousButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/previousButtonText"
            android:textColor="@android:color/black"
            android:textColorHighlight="#4CAF50"
            android:textColorLink="#42DD0A" />

        <ImageView
            android:id="@+id/photo1"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:contentDescription="@string/text1"
            android:visibility="gone"
            app:srcCompat="@drawable/photo1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-112dp" />

        <TextView
            android:id="@+id/text1"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textAlignment="center"
            android:visibility="gone"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="429dp" />

        <ImageView
            android:id="@+id/photo2"
            android:layout_width="match_parent"
            android:layout_height="427dp"
            android:contentDescription="@string/text2"
            android:visibility="gone"
            app:srcCompat="@drawable/photo2" />

        <TextView
            android:id="@+id/text2"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo3"
            android:layout_width="match_parent"
            android:layout_height="391dp"
            android:contentDescription="@string/text3"
            android:visibility="gone"
            app:srcCompat="@drawable/photo3" />

        <TextView
            android:id="@+id/text3"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/text3"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo4"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:contentDescription="@string/text4"
            android:visibility="gone"
            app:srcCompat="@drawable/photo4" />

        <TextView
            android:id="@+id/text4"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo5"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:contentDescription="@string/text5"
            android:visibility="gone"
            app:srcCompat="@drawable/photo5" />

        <TextView
            android:id="@+id/text5"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text5"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo6"
            android:layout_width="match_parent"
            android:layout_height="287dp"
            android:contentDescription="@string/text6"
            android:visibility="gone"
            app:srcCompat="@drawable/photo6" />

        <TextView
            android:id="@+id/text6"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text6"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo7"
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:contentDescription="@string/text7"
            android:visibility="gone"
            app:srcCompat="@drawable/photo7" />

        <TextView
            android:id="@+id/text7"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text7"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo8"
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:contentDescription="@string/text8"
            android:visibility="gone"
            app:srcCompat="@drawable/photo8" />

        <TextView
            android:id="@+id/text8"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text8"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo9"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:contentDescription="@string/text9"
            android:visibility="gone"
            app:srcCompat="@drawable/photo9" />

        <TextView
            android:id="@+id/text9"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text9"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/photo10"
            android:layout_width="match_parent"
            android:layout_height="341dp"
            android:contentDescription="@string/text10"
            android:visibility="gone"
            app:srcCompat="@drawable/photo10" />

        <TextView
            android:id="@+id/text10"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text10"
            android:visibility="gone" />

    </LinearLayout>
</layout>